2008-03-03  Tor Lillqvist  <tml@novell.com>

	* glib/gspawn-win32.c (read_helper_report): Must set the GError
	also in the unexpected EOF case.
	(do_spawn_with_pipes): Must protect also new_argv[0].

2008-03-01  Benjamin Otte  <otte@gnome.org>

	* glib/glist.c:
	fix last commit.

2008-02-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslist.c: 
	* glib/glist.c: Move docs inline, and improve the 
	g_[s]list_delete_link docs.  (#519352, Owen Taylor)

2008-02-29  Tor Lillqvist  <tml@novell.com>

	* glib/win_iconv.c (name_to_codepage): Add some GNU libiconv
	compatibility: Recognize "" and "char" as aliases for the current
	locale's charset. (We use the system ANSI codepage as returned by
	GetACP().) Recognize "wchar_t" as an alias for UTF-16LE.

2008-02-27  Matthew Barnes  <mbarnes@redhat.com>

	* glib/gchecksum.[ch] (g_checksum_update),
	(g_compute_checksum_for_string): Make 'length' parameter
	signed to accomodate passing negative lengths. (#510855)

2008-02-26  Tor Lillqvist  <tml@novell.com>

	* glib/gmain.c (g_poll): Further patch by Vlad Grecescu: Drop the
	code path that called WaitMessage(), as WaitMessage() doesn't
	offer any chance for APCs to run. Instead just use the code path
	with MsgWaitForMultipleObjectsEx() even for the
	wait-only-for-messages case. (#517484)

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.15.6 ===

	* NEWS: Updates

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* glib/gtestfuncs.c: Add Since: markers to docs.  (#518556, 
	Jerry Yu)

2008-02-25  Alexander Larsson  <alexl@redhat.com>

	* glib/glib.symbols:
        * glib/gurifuncs.[ch]:
        Rename g_uri_get_scheme to g_uri_parse_scheme.
	Keep g_uri_get_scheme() symbol for this
	unstable release to avoid breaking to many apps.

2008-02-24  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.c (_glib_get_installation_directory): New internal function.

	* glib/gspawn-win32.c: When spawning the helper process, use an